<resources>
    <string name="app_name">mobileTest</string>
    <string name="skip">Пропустить</string>
    <string name="support">Служба поддержки</string>
    <string name="login">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="password_hint">Пароль</string>
    <string name="login_hint">Логин</string>
    <string name="welcome">ДОБРО ПОЖАЛОВАТЬ!</string>
    <string name="support_service_title">СЛУЖБА ТЕХПОДДЕРЖКИ</string>
    <string name="support_service_content">Приветствуем вас на нашем проекте. Вы можете позвонить нам по телефону ниже, написать на почту или отправить сообщение прямо с приложения</string>
    <string name="support_service_telephone">+7 701 32 99 400</string>
    <string name="support_service_email">support@app.kz</string>
    <string name="support_service_send">Отправить сообщение</string>
    <string name="support_service_edit_text_hint">Напишите свое сообщение</string>
    <string name="name">Имя</string>
    <string name="surname">Фаимилия</string>
    <string name="third_name">Отчество</string>
    <string name="date">Дата рождения</string>
    <string name="city">Город проживания</string>
    <string name="about_user">О себе</string>
    <string name="sign_up_user">Зарегистрироваться</string>
    <string name="add_photo">Добавить фотографию</string>
    <string name="license">Пользовательское соглашение</string>
</resources>